--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,9 @@ body {
 }
 /* index.html */
 /* header */
+.header {
+  border-bottom: 1px solid #eeeeee;
+}
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -41,6 +44,10 @@ ul {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+p {
+  margin: 0;
+  padding: 0;
 }
 h1,
 h2,
@@ -116,9 +123,11 @@ h4 {
 }
 
 .hero-title {
-  margin-top: 0;
-  margin-bottom: 30px;
   width: 696px;
+  margin-top: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -126,6 +135,7 @@ h4 {
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
+
 .section-hero {
   text-align: center;
   padding-top: 200px;
@@ -157,6 +167,9 @@ h4 {
 }
 .team-item {
   margin-right: 30px;
+}
+.img-photo {
+  margin-bottom: 30px;
 }
 .section-about {
   padding-top: 94px;
@@ -203,11 +216,13 @@ h4 {
   font-size: 16px;
   line-height: 1.18;
   margin-bottom: 10px;
+  text-align: center;
 }
 .team-p {
   font-size: 16px;
   line-height: 1.18;
   color: var(--secondary-text-color);
+  text-align: center;
 }
 /* footer */
 .logo-footer {
@@ -223,14 +238,17 @@ h4 {
 footer {
   background-color: var(--bgc-color);
 }
-.footer-list .footer-contact {
+.footer-contact {
   font-size: 14px;
   line-height: 1.7;
   color: var(--footer-contact);
   font-weight: 500;
 }
-.footer-list .footer-contact:hover,
-.footer-list .footer-contact:focus {
+.footer-item {
+  margin-bottom: 8px;
+}
+.footer-contact:hover,
+.footer-contact:focus {
   color: var(--accent-color);
 }
 .footer-adress {
@@ -238,12 +256,26 @@ footer {
   line-height: 1.7;
   font-style: normal;
   color: var(--text-color);
+  margin-top: 20px;
+  margin-bottom: 9px;
+}
+.footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 /* portfolio.html */
+.wrapper {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 button {
   font-family: inherit;
 }
-.filter .filter-list {
+.filter {
+  display: flex;
+  justify-content: center;
+}
+.filter-list {
   font-family: inherit;
   background-color: var(--portfolio-button);
   font-weight: 500;
@@ -252,17 +284,37 @@ button {
   border: none;
   cursor: pointer;
   letter-spacing: 0.03em;
+  margin-right: 8px;
+  margin-bottom: 50px;
+  border-radius: 4px;
+  padding: 6px 22px;
 }
 .filter .filter-list:hover,
 .filter .filter-list:focus {
   background-color: var(--accent-color);
   color: var(--text-color);
 }
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
 .port-title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  margin-bottom: 4px;
+}
+.port-card {
+  padding: 20px 24px;
 }
 .port-desk {
   font-size: 16px;
@@ -276,4 +328,17 @@ button {
 .port-item {
   width: 370px;
   margin-right: 30px;
+  /* width: calc((100%-60px) / 3); */
+  padding-bottom: 20px;
+  margin-bottom: 30px;
+  border: 1px solid #eeeeee;
+}
+.port-item:nth-child(3n) {
+  margin-right: 0;
+}
+.port-item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+.img-port {
+  margin-bottom: 20px;
 }
