--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,8 @@ h4 {
   font-family: inherit;
   color: var(--text-color);
   background-color: var(--accent-color);
+  font-size: 16px;
+  line-height: 1.87;
   letter-spacing: 0.06em;
   cursor: pointer;
   padding: 10px 32px;
@@ -167,6 +169,8 @@ h4 {
 }
 .team-item {
   margin-right: 30px;
+  background-color: #fff;
+  padding-bottom: 30px;
 }
 .img-photo {
   margin-bottom: 30px;
@@ -329,7 +333,6 @@ button {
   width: 370px;
   margin-right: 30px;
   /* width: calc((100%-60px) / 3); */
-  padding-bottom: 20px;
   margin-bottom: 30px;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
@@ -341,6 +344,6 @@ button {
 .port-item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
-.img-port {
+/* .img-port {
   margin-bottom: 20px;
-}
+} */
